# fs-agentic-ui

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
1_beginning/: 1_case.ipynb
design_docs/: Agentic Web Design Modification Workflow Strategy.docx  cto-instructions.md  executive-summary.md  init_prompt.md  revised-design.md  work-schedule.md
week1/: day1.ipynb
