[project]
name = "fs-agentic-ui-design"
version = "0.1.0"
description = "An Agentic UI Design Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.11.1",
    "playwright>=1.51.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
